--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
 DOCKER_USERNAME=kienkieu080702@gmail.com
+SECRET_KEY=CUOCDOIVANDEPSAO
+SERVER_URL=http://localhost:3001/
+API_URL=http://localhost:3001/api
+SOCKET_URL=http://localhost:3001
+TINY_MCE_API_KEY=cckdt047mysl0hut717e97kcjnr4cyynjx7m0i8xwx5osgw3
+
+FIREBASE_API_KEY=AIzaSyCMPdYmwzDgE0UZde6HV9rC3zB1r-rr1Lc
+FIREBASE_AUTH_DOMAIN=support-medsiki.firebaseapp.com
+FIREBASE_PROJECT_ID=support-medsiki
+FIREBASE_STORAGE_BUCKET=support-medsiki.firebasestorage.app
+FIREBASE_MESSAGING_SENDER_ID=400684593618
+FIREBASE_APP_ID=1:400684593618:web:93b3b386b2efb85d81180b
+FIREBASE_MEASUREMENT_ID=G-SH4YYXH5FS
