--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
+    "angular-cli-ghpages": "^2.0.3",
     "autoprefixer": "^10.4.20",
     "eslint-config-prettier": "^9.1.0",
     "jasmine-core": "~5.2.0",
